Remove jaja.js file containing quiz logic and questions

--- a/Controlador/SelecionExamen.html
+++ b/Controlador/SelecionExamen.html
@@ -12,6 +12,9 @@
             <a href="../Controlador/Preguntas.html" class="btn btn-outline-primary">Examen 1</a>
            
             <a href="../Controlador/Reactivos2025.html" class="btn btn-outline-success">Examen 2</a>
+
+            
+            <a href="../Controlador/Preguntas4.html" class="btn btn-outline-danger">Examen 3</a>
         </div>
     </div>
 </body>
